--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 	width: 400px;
 	height: 500px;
 	border: 1px solid black;
+	overflow: hidden;
 }
 
 #block {
@@ -21,4 +22,14 @@
 @keyframes block {
 	0% {left:400px;}
 	100% {left:-50px;}
+}
+
+#hole {
+	width: 50px;
+	height: 150px;
+	background-color: white;
+	position: relative;
+	left: 400px;
+	top: -500px;
+	animation: block 2s infinite linear;
 }
