--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,13 @@
 	top: -500px;
 	animation: block 2s infinite linear;
 }
+
+#character {
+	width: 20px;
+	height: 20px;
+	background-color: blue;
+	position: absolute;
+	top: 100px;
+	top: 100px;
+	border-radius: 50%;
+}
